@@ -69,6 +69,10 @@ Trunk (unreleased changes)
     HADOOP-1748.  Fix tasktracker to be able to launch tasks when log
     directory is relative.  (omalley via cutting)
 
+    HADOOP-1775 Fix a NullPointerException and an
+    IllegalArgumentException in MapWritable.
+    (Jim Kellerman via cutting)
+
   IMPROVEMENTS
 
     HADOOP-1756. Add toString() to some Writable-s. (ab)
